@@ -1,4 +1,4 @@
-DOS2UNIX_VERSION = 6.0.7-beta3
-DOS2UNIX_VERSION_SHORT = 607b3
-DOS2UNIX_DATE = 2014-08-08
+DOS2UNIX_VERSION = 6.1-beta1
+DOS2UNIX_VERSION_SHORT = 61b1
+DOS2UNIX_DATE = 2014-08-17
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
